# haskellbook-solutions

./: .gitignore  haskellbook-solutions.cabal  stack.yaml
chapter10/: database.hs  exercises.hs  exercises.md  scanfib.hs
chapter11/: exercises.hs  exercises.md  jammin.hs
chapter2/: FunctionWithLet.hs  FunctionWithWhere.hs  exercises.md  learn.hs  practice.hs  test.hs
chapter3/: area.hs  exercises.hs  exercises.md  notes.md  print1.hs  print2.hs  print3.hs  print3Flipped.hs  reverse.hs
chapter4/: changeMood.hs  exercises.hs  exercises.md  greetIfCool1.hs  greetIfCool2.hs  notes.md
chapter5/: arith3broken.hs  chapter5.hs  exercises.hs  exercises.md  notes.md  sing.hs  typeInference1.hs  typeInference2.hs
chapter6/: exercises.hs  exercises.md  typeclasses.hs
chapter7/: arith2.hs  arith4.hs  employees.hs  exercises.hs  exercises.md  matchingTuples1.hs  penguins.hs
chapter8/: exercises.hs  exercises.md  notes.md
chapter9/: cipher.hs  exercises.hs  exercises.md  myListFns.hs  poemLines.hs
