name:                haskellbook-solutions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskellbook-solutions#readme
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellbook-solutions
